--- a/careers/index.html
+++ b/careers/index.html
@@ -300,7 +300,7 @@
                         <span class="hamburger-line"></span>
                         <span class="hamburger-line"></span>
                         <span class="hamburger-line"></span>
-                        <span class="menu-label">Menu</span>
+                        <span class="menu-label"></span>
                     </div>
                 </div>
             </nav>
