--- a/contact/index.html
+++ b/contact/index.html
@@ -311,7 +311,7 @@
                         <span class="hamburger-line"></span>
                         <span class="hamburger-line"></span>
                         <span class="hamburger-line"></span>
-                        <span class="menu-label">Menu</span>
+                        <span class="menu-label"></span>
                     </div>
                 </div>
             </nav>
