--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                         <span class="hamburger-line"></span>
                         <span class="hamburger-line"></span>
                         <span class="hamburger-line"></span>
-                        <span class="menu-label">Menu</span>
+                        <span class="menu-label"></span>
                     </div>
                 </div>
             </nav>
