--- a/products/stanza/index.html
+++ b/products/stanza/index.html
@@ -305,7 +305,7 @@
                         <span class="hamburger-line"></span>
                         <span class="hamburger-line"></span>
                         <span class="hamburger-line"></span>
-                        <span class="menu-label">Menu</span>
+                        <span class="menu-label"></span>
                     </div>
                 </div>
             </nav>
