--- a/products/stardec/index.html
+++ b/products/stardec/index.html
@@ -293,7 +293,7 @@
                         <span class="hamburger-line"></span>
                         <span class="hamburger-line"></span>
                         <span class="hamburger-line"></span>
-                        <span class="menu-label">Menu</span>
+                        <span class="menu-label"></span>
                     </div>
                 </div>
             </nav>
